--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -13,6 +13,9 @@
 #define COMBO_IDLE_FAST 150
 #define COMBO_IDLE_SLOW 50
 
+ZMK_COMBO(mouse, &smart_mouse, LT3 LT4,     BASE , COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+/* Horizontal combos - left hand */
 ZMK_COMBO(cut,   &kp LC(X),    LB3 LB1,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(copy,  &kp LC(INS),  LB3 LB2,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(paste, &kp LS(INS),  LB2 LB1,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
