--- a/config/west.yml
+++ b/config/west.yml
@@ -32,6 +32,7 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
+      revision: v0.3
       import: app/west.yml
 
     # ZMK modules
