--- a/config/mouse.dtsi
+++ b/config/mouse.dtsi
@@ -21,13 +21,13 @@
 
 &mmv_input_listener {
 	warp {
-		layers = <ADJUST>;
+		layers = <LOWER>;
 		input-processors = <&zip_xy_scaler 3 1>;
 	};
-//	precision {
-//		layers = <FN>;
-//		input-processors = <&zip_xy_scaler 1 2>;
-//	};
+	precision {
+		layers = <RAISE>;
+		input-processors = <&zip_xy_scaler 1 2>;
+	};
 };
 
 / {
@@ -42,13 +42,13 @@
 
 &msc_input_listener {
 	warp {
-		layers = <ADJUST>;
+		layers = <LOWER>;
 		input-processors = <&zip_scroll_scaler 2 1>;
 	};
-//	precision {
-//		layers = <FN>;
-//		input-processors = <&zip_scroll_scaler 1 2>;
-//	};
+	precision {
+		layers = <RAISE>;
+		input-processors = <&zip_scroll_scaler 1 2>;
+	};
 };
 
 #define U_MS_U &mmv MOVE_UP
