--- a/config/west.yml
+++ b/config/west.yml
@@ -28,6 +28,10 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: kevinpastor
       url-base: https://github.com/kevinpastor
+    - name: infely
+      url-base: https://github.com/infely
+    - name: jestar
+      url-base: https://github.com/Jestar342
 
   projects:
     - name: zmk
@@ -46,8 +50,17 @@ manifest:
       path: modules/zmk/leader-key
     - name: zmk-tri-state
       path: modules/zmk/tri-state
+
     - name: nice-view-elemental
       remote: kevinpastor
+      revision: main
+
+    - name: nice-view-battery                  # new entry
+      remote: infely                           # new entry
+      revision: main                           # new entry
+
+    - name: nice-shield-spacemarine
+      remote: jestar
       revision: main
 
     # Temporarily overload Zephyr until
