feat: sentense case, new combos

--- a/draw/config.yaml
+++ b/draw/config.yaml
@@ -3,13 +3,15 @@ parse_config:
     - "modules/zmk/helpers/include"
 
   zmk_preamble: |
-    #include <zmk-helpers/key-labels/sofle.h>
+    #include <zmk-helpers/key-labels/lily58.h>
     #define CONFIG_WIRELESS
 
   raw_binding_map:
     "&sys_reset": Reset
     "&bootloader": Boot
     "&caps_word": Caps Word
+
+    "&ak_space": Space
 
     "&bt BT_SEL 0": BT 1
     "&bt BT_SEL 1": BT 2
@@ -27,6 +29,7 @@ parse_config:
 
     "&swapper": Next Win
     "&kp LS(TAB)": Prev Win
+    "&wswapper":  Cycle Tabs
     "&dot_spc": Sentence
     "&num_dance": { "t": "Numword", "s": "Sticky Num" }
     "&magic_shift": { "t": Magic, "h": "Shift" }
@@ -174,4 +177,4 @@ draw_config:
   dark_mode: auto
   footer_text: "coredump/zmk-config"
   separate_combo_diagrams: false
-  n_columns: 2
+  n_columns: 1
