--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -23,3 +23,13 @@ ZMK_COMBO(paste, &kp LS(INS),  LF2 LF1,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FA
 
 /* Horizontal combos - right hand */
 ZMK_COMBO(del,   &kp DEL,      RT4 RT5,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(quote, &kp SQT,    RM1 RM2,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(dquote, &kp DQT,   RM2 RM3,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(qmark, &kp QMARK,   RF3 RF4,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+/* Vertical combos left hand */
+ZMK_COMBO(backslash, &kp BACKSLASH,  LM2 LB2,  BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+/* toggle gaming layer */
+
+ZMK_COMBO(gaming, &tog GAMING, LM2 RM2, ADJUST, COMBO_TERM_FAST, COMBO_IDLE_FAST)
