--- a/build.yaml
+++ b/build.yaml
@@ -13,8 +13,21 @@
 #
 ---
 include:
+#  - board: nice_nano_v2
+#    shield: lily58_left nice_view_adapter nice_view_battery
+#    snippet: studio-rpc-usb-uart
+#  - board: nice_nano_v2
+#    shield: lily58_right nice_view_adapter nice_view_battery
   - board: nice_nano_v2
-    shield: lily58_left nice_view_adapter nice_view_battery
+    shield: settings_reset
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
+  - board: seeeduino_xiao_ble
+    shield: lily58_dongle prospector_adapter
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
-    shield: lily58_right nice_view_adapter nice_view_battery
+    shield: lily58_left nice_view_adapter nice_view_elemental
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+  - board: nice_nano_v2
+    shield: lily58_right nice_view_adapter nice_view_elemental
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
