--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 
 # Uncomment the following line to enable the Sofle OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
@@ -31,3 +31,7 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 # fix for macos being dumb
 CONFIG_BT_BAS=n
+
+# prospector dongle stuff
+CONFIG_PROSPECTOR_USE_AMBIENT_LIGHT_SENSOR=n
+CONFIG_PROSPECTOR_FIXED_BRIGHTNESS=80
