--- a/config/west.yml
+++ b/config/west.yml
@@ -28,10 +28,8 @@ manifest:
       url-base: https://github.com/zmkfirmware
     - name: kevinpastor
       url-base: https://github.com/kevinpastor
-    - name: infely
-      url-base: https://github.com/infely
-    - name: jestar
-      url-base: https://github.com/Jestar342
+    - name: carrefinho
+      url-base: https://github.com/carrefinho
 
   projects:
     - name: zmk
@@ -55,13 +53,9 @@ manifest:
       remote: kevinpastor
       revision: main
 
-    - name: nice-view-battery                  # new entry
-      remote: infely                           # new entry
-      revision: main                           # new entry
-
-    - name: nice-shield-spacemarine
-      remote: jestar
-      revision: main
+    - name: prospector-zmk-module                 # <--- and these
+      remote: carrefinho                          # <---
+      revision: main                              # <---
 
     # Temporarily overload Zephyr until
     # https://github.com/zmkfirmware/zephyr/pull/40 is merged.
