--- a/build.yaml
+++ b/build.yaml
@@ -23,7 +23,7 @@ include:
   - board: seeeduino_xiao_ble
     shield: settings_reset
   - board: seeeduino_xiao_ble
-    shield: lily58_dongle prospector_adapter
+    shield: lily58_dongle dongle_screen
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
     shield: lily58_left nice_view_adapter nice_view_elemental
