--- a/build.yaml
+++ b/build.yaml
@@ -20,14 +20,19 @@ include:
 #    shield: lily58_right nice_view_adapter nice_view_battery
   - board: nice_nano_v2
     shield: settings_reset
+    artifact-name: nice_nano_reset
   - board: seeeduino_xiao_ble
     shield: settings_reset
+    artifact-name: xiao_reset
   - board: seeeduino_xiao_ble
     shield: lily58_dongle dongle_screen
     snippet: studio-rpc-usb-uart
+    artifact-name: lily_dongle_center
   - board: nice_nano_v2
     shield: lily58_left nice_view_adapter nice_view_elemental
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    artifact-name: lily_dongle_left
   - board: nice_nano_v2
     shield: lily58_right nice_view_adapter nice_view_elemental
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    artifact-name: lily_dongle_right
