--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -2,7 +2,7 @@
 # SPDX-License-Identifier: MIT
 
 # Uncomment the following line to enable the Sofle OLED Display
-CONFIG_ZMK_DISPLAY=y
+# CONFIG_ZMK_DISPLAY=y
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
@@ -29,5 +29,4 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 
-# fix for macos being dumb
-CONFIG_BT_BAS=n
+CONFIG_DONGLE_SCREEN_WPM_ACTIVE=n
