--- a/build.yaml
+++ b/build.yaml
@@ -36,3 +36,9 @@ include:
     shield: lily58_right nice_view_adapter nice_view_elemental
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
     artifact-name: lily_dongle_right
+  - board: nice_nano_v2
+    shield: lily58_left nice_view_adapter nice_view_elemental
+    artifact-name: lily_standalone_left
+  - board: nice_nano_v2
+    shield: lily58_right nice_view_adapter nice_view_elemental
+    artifact-name: lily_standalone_right
