chore: updating for totem support

--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -7,6 +7,15 @@
  │ LF5 LF4 LF3 LF2 LF1 LF0 LEC │ REC RF0 RF1 RF2 RF3 RF4 RF5 │
  ╰───────────╮ LH3 LH2 LH1 LH0 │ RH0 RH1 RH2 RH3 ╭───────────╯
              ╰─────────────────┴─────────────────╯             */
+/*                                      38 KEY MATRIX / LAYOUT MAPPING
+
+      ╭────────────────────────┬──────────────────────╮
+      │  LT4 LT3 LT2 LT1 LT0 │ RT0 RT1 RT2 RT3 RT4 │
+  ╭──╯    LM4 LM3 LM2 LM1 LM0 │ RM0 RM1 RM2 RM3 RM4   ╰───╮
+  │ LB5 LB4 LB3 LB2 LB1 LB0 │ RB0 RB1 RB2 RB3 RB4 RB5 │
+  ╰──────────╮  LH2 LH1 LH0 │ RH0 RH1 RH2 ╭───────────────╯
+              ╰──────────────┴─────────────╯
+*/
 
 #define COMBO_TERM_FAST 18
 #define COMBO_TERM_SLOW 30
@@ -14,22 +23,17 @@
 #define COMBO_IDLE_FAST 150
 #define COMBO_IDLE_SLOW 50
 
-ZMK_COMBO(mouse, &smart_mouse, LM3 LM4,     BASE , COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mouse, &smart_mouse,        LT3 LT4,     BASE , COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Horizontal combos - left hand */
-ZMK_COMBO(cut,   &kp LC(X),    LF3 LF1,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(copy,  &kp LC(INS),  LF3 LF2,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(paste, &kp LS(INS),  LF2 LF1,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-
+ZMK_COMBO(cut,        &kp LC(X),      LB3 LB1,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(copy,       &kp LC(INS),    LB3 LB2,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(paste,      &kp LS(INS),    LB2 LB1,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 /* Horizontal combos - right hand */
-ZMK_COMBO(del,   &kp DEL,      RT4 RT5,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(quote, &kp SQT,    RM1 RM2,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(dquote, &kp DQT,   RM2 RM3,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(qmark, &kp QMARK,   RF3 RF4,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-
+ZMK_COMBO(quote,      &kp SQT,        RT1 RT2,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(dquote,     &kp DQT,        RT2 RT3,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(qmark,      &kp QMARK,      RB3 RB4,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 /* Vertical combos left hand */
-ZMK_COMBO(backslash, &kp BACKSLASH,  LM2 LB2,  BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
-
+ZMK_COMBO(backslash,  &kp BACKSLASH,  LT2 LM2,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 /* toggle gaming layer */
-
-ZMK_COMBO(gaming, &tog GAMING, LM2 RM2, ADJUST, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(gaming,     &tog GAMING,    LM2 RM2,     ADJUST, COMBO_TERM_FAST, COMBO_IDLE_FAST)
