--- a/build.yaml
+++ b/build.yaml
@@ -42,3 +42,11 @@ include:
   - board: nice_nano_v2
     shield: lily58_right nice_view_adapter nice_view_elemental
     artifact-name: lily_standalone_right
+  - board: seeeduino_xiao_ble
+    shield: totem_left rgbled_adapter
+    artifact-name: totem_left
+  - board: seeeduino_xiao_ble
+    shield: totem_right rgbled_adapter
+    artifact-name: totem_right
+  - board: seeeduino_xiao_ble
+    shield: tester_xiao
