--- a/build.yaml
+++ b/build.yaml
@@ -1,4 +1,4 @@
-# This file generates the GitHub Actions matrix
+g This file generates the GitHub Actions matrix
 # For simple board + shield combinations, add them
 # to the top level board and shield arrays, for more
 # control, add individual board + shield combinations to
@@ -18,12 +18,15 @@ include:
 #    snippet: studio-rpc-usb-uart
 #  - board: nice_nano_v2
 #    shield: lily58_right nice_view_adapter nice_view_battery
+  - board: seeeduino_xiao_ble
+    shield: tester_xiao
   - board: nice_nano_v2
     shield: settings_reset
     artifact-name: nice_nano_reset
   - board: seeeduino_xiao_ble
     shield: settings_reset
     artifact-name: xiao_reset
+    # Lily with dongle
   - board: seeeduino_xiao_ble
     shield: lily58_dongle dongle_screen
     snippet: studio-rpc-usb-uart
@@ -36,21 +39,32 @@ include:
     shield: lily58_right nice_view_adapter nice_view_elemental
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
     artifact-name: lily_dongle_right
+    # Lily without a dongle
   - board: nice_nano_v2
     shield: lily58_left nice_view_adapter nice_view_elemental
     artifact-name: lily_standalone_left
   - board: nice_nano_v2
     shield: lily58_right nice_view_adapter nice_view_elemental
     artifact-name: lily_standalone_right
+    # Totem without a dongle
   - board: seeeduino_xiao_ble
     shield: totem_left rgbled_adapter
-    cmake-args: -DBODGE_COL=y
-    artifact-name: totem_left
+    snippet: studio-rpc-usb-uart
+    artifact-name: totem_standalone_left
   - board: seeeduino_xiao_ble
     shield: totem_right rgbled_adapter
     snippet: studio-rpc-usb-uart
-    cmake-args: -DBODGE_COL=y
-    snippet: studio-rpc-usb-uart
-    artifact-name: totem_right
+    artifact-name: totem_standalone_right
+    # Totem with a dongle
   - board: seeeduino_xiao_ble
-    shield: tester_xiao
+    shield: totem_left
+    artifact-name: totem_dongle_left
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+  - board: seeeduino_xiao_ble
+    shield: totem_right
+    artifact-name: totem_dongle_right
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+  - board: seeeduino_xiao_ble
+    shield: totem_dongle
+    snippet: studio-rpc-usb-uart
+    artifact-name: totem_dongle_central
