--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -27,13 +27,20 @@ ZMK_COMBO(mouse, &smart_mouse,        LT3 LT4,     BASE , COMBO_TERM_FAST, COMBO
 
 /* Horizontal combos - left hand */
 ZMK_COMBO(cut,        &kp LC(X),      LB3 LB1,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(copy,       &kp LC(INS),    LB3 LB2,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(paste,      &kp LS(INS),    LB2 LB1,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(copy,       &kp LC(C),    LB3 LB2,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(paste,      &kp LC(V),    LB2 LB1,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 /* Horizontal combos - right hand */
 ZMK_COMBO(quote,      &kp SQT,        RT1 RT2,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 ZMK_COMBO(dquote,     &kp DQT,        RT2 RT3,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(qmark,      &kp QMARK,      RB3 RB4,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(qmark,      &kp QMARK,      RM3 RM4,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 /* Vertical combos left hand */
 ZMK_COMBO(backslash,  &kp BACKSLASH,  LT2 LM2,     BASE,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-/* toggle gaming layer */
+/* toggle layers */
 ZMK_COMBO(gaming,     &tog GAMING,    LM2 RM2,     ADJUST, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(gaming,     &tog MAC,       LM0 RM0,     ADJUST, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+/* toggle capsword */
+ZMK_COMBO(cword,     &caps_word,      LM1 RM1,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
+/* leader */
+//ZMK_COMBO(lead,     &leader,      RB2 RB3,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+
