--- a/build.yaml
+++ b/build.yaml
@@ -68,3 +68,12 @@ include:
     shield: totem_dongle
     snippet: studio-rpc-usb-uart
     artifact-name: totem_dongle_central
+    # Forager without a dongle
+  - board: seeeduino_xiao_ble
+    shield: forager_left rgbled_adapter
+    snippet: studio-rpc-usb-uart
+    artifact-name: forager_standalone_left
+  - board: seeeduino_xiao_ble
+    shield: forager_right rgbled_adapter
+    snippet: studio-rpc-usb-uart
+    artifact-name: forager_standalone_right
