--- a/draw/config.yaml
+++ b/draw/config.yaml
@@ -5,6 +5,7 @@ parse_config:
   zmk_preamble: |
     #include <zmk-helpers/key-labels/totem.h>
     #define CONFIG_WIRELESS
+    #define CONFIG_PM
 
   raw_binding_map:
     "&sys_reset": Reset
@@ -36,6 +37,8 @@ parse_config:
     "&num_dance": { "t": "Numword", "s": "Sticky Num" }
     "&magic_shift": { "t": Magic, "h": "Shift" }
     "&smart_mouse": Smart Mouse
+
+    "&soft_off": Turn Off
 
     "&hml LS(LALT)TAB": Tab
     "&hm_combo_ldr": Leader
