--- a/config/west.yml
+++ b/config/west.yml
@@ -38,6 +38,8 @@ manifest:
       url-base: https://github.com/joelspadin
     - name: carrefinho
       url-base: https://github.com/carrefinho
+    - name: prospector
+      url-base: https://github.com/t-ogura
 
   projects:
     - name: zmk
@@ -99,6 +101,11 @@ manifest:
       remote: carrefinho
       revision: main
       path: modules/forager-zmk-module
+
+    - name: prospector-zmk-module
+      remote: prospector
+      revision: v1.1.1
+      path: modules/prospector-zmk-module
 
 
     # Temporarily overload Zephyr until
