--- a/draw/totem.yaml
+++ b/draw/totem.yaml
@@ -74,7 +74,7 @@ layers:
   - \
   - {t: Numword, h: Num, s: Sticky Num}
   - {type: trans}
-  - {type: trans}
+  - {t: Enter, h: MacNav}
   - {type: trans}
   - {type: trans}
   - ''
@@ -274,25 +274,25 @@ layers:
   - CANCEL
   - ''
   Num:
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - '7'
-  - '8'
-  - '9'
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - {type: trans}
-  - '0'
+  - '1'
+  - '2'
+  - '3'
   - '4'
   - '5'
   - '6'
+  - '7'
+  - '8'
+  - '9'
+  - '0'
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
   - {type: trans}
   - Esc
   - {type: trans}
@@ -300,10 +300,10 @@ layers:
   - {type: trans}
   - {type: trans}
   - {type: trans}
-  - .
-  - '1'
-  - '2'
-  - '3'
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
   - {type: trans}
   - \
   - {t: Numword, h: Num, s: Sticky Num, type: held}
@@ -313,7 +313,7 @@ layers:
   - CANCEL
   - ''
   Nav:
-  - {type: trans}
+  - '&win_lock'
   - {type: trans}
   - Prev Win/Tab
   - Next Tab
@@ -327,7 +327,46 @@ layers:
   - {type: trans}
   - {type: trans}
   - {type: trans}
+  - '&win_prsc'
+  - PgDn
+  - ←
+  - ↓
+  - →
   - {type: trans}
+  - Esc
+  - Turn Off
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - \
+  - {t: Numword, h: Num, s: Sticky Num}
+  - {type: trans}
+  - {type: held}
+  - {type: trans}
+  - {type: trans}
+  - ''
+  MacNav:
+  - '&mac_lock'
+  - {type: trans}
+  - Prev Win/Tab
+  - Next Tab
+  - '&mac_sw'
+  - PgUp
+  - Home
+  - ↑
+  - End
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - {type: trans}
+  - '&mac_prsc'
   - PgDn
   - ←
   - ↓
@@ -354,36 +393,36 @@ layers:
 combos:
 - p: [17, 16]
   k: {t: ESC, h: Sft+Ctrl}
-  l: [Base, Nav, Num]
+  l: [Base, Nav, Num, MacOS, Gaming]
 - p: [13, 16]
   k: {t: Caps Word, h: Sft+RSFT}
-  l: [Base]
+  l: [Base, MacOS, Gaming]
 - p: [22, 21]
   k: Smart Mouse
-  l: [Base]
+  l: [Base, MacOS, Gaming]
 - p: [22, 24]
   k: Cut
-  l: [Base]
+  l: [Base, Gaming]
   a: bottom
   o: 0.15
 - p: [22, 23]
   k: Ctl+C
-  l: [Base]
+  l: [Base, Gaming]
 - p: [23, 24]
   k: Ctl+V
-  l: [Base]
+  l: [Base, Gaming]
 - p: [6, 7]
   k: ''''
-  l: [Base]
+  l: [Base, MacOS, Gaming]
 - p: [7, 8]
   k: '"'
-  l: [Base]
+  l: [Base, MacOS, Gaming]
 - p: [28, 29]
   k: '?'
-  l: [Base]
+  l: [Base, MacOS, Gaming]
 - p: [2, 12]
   k: \
-  l: [Base]
+  l: [Base, MacOS, Gaming]
 - p: [12, 17]
   k: {t: Gaming, h: toggle}
   l: [Adjust]
@@ -392,4 +431,4 @@ combos:
   l: [Adjust]
 - p: [14, 15]
   k: {t: Numword, h: Num, s: Sticky Num}
-  l: [Base]
+  l: [Base, MacOS, Gaming]
