--- a/draw/lily58.yaml
+++ b/draw/lily58.yaml
@@ -37,7 +37,7 @@ layers:
   - {t: L, h: Alt}
   - {t: ;, h: Gui}
   - ''''
-  - LSFT
+  - Ctrl
   - Z
   - X
   - C
@@ -96,7 +96,7 @@ layers:
   - {type: trans}
   - {t: ;, h: Gui}
   - ''''
-  - LSFT
+  - Ctrl
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -155,7 +155,7 @@ layers:
   - L
   - ;
   - ''''
-  - LSFT
+  - Ctrl
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -214,7 +214,7 @@ layers:
   - _
   - ''''
   - ''''
-  - LSFT
+  - Ctrl
   - '~'
   - +
   - '['
@@ -273,7 +273,7 @@ layers:
   - →
   - {type: trans}
   - ''''
-  - LSFT
+  - Ctrl
   - {type: trans}
   - F1
   - F2
@@ -332,7 +332,7 @@ layers:
   - {type: trans}
   - {type: trans}
   - ''''
-  - LSFT
+  - Ctrl
   - Boot
   - {type: trans}
   - {type: trans}
@@ -391,7 +391,7 @@ layers:
   - Mouse →
   - Scroll →
   - ''''
-  - LSFT
+  - Ctrl
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -450,7 +450,7 @@ layers:
   - {type: trans}
   - {type: trans}
   - ''''
-  - LSFT
+  - Ctrl
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -509,7 +509,7 @@ layers:
   - →
   - {type: trans}
   - ''''
-  - LSFT
+  - Ctrl
   - Turn Off
   - {type: trans}
   - {type: trans}
@@ -568,7 +568,7 @@ layers:
   - →
   - {type: trans}
   - ''''
-  - LSFT
+  - Ctrl
   - Turn Off
   - {type: trans}
   - {type: trans}
