--- a/draw/totem.yaml
+++ b/draw/totem.yaml
@@ -210,7 +210,7 @@ layers:
   - {type: trans}
   - {type: trans}
   - {type: trans}
-  - {type: trans}
+  - {t: MacOS, h: toggle}
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -221,7 +221,7 @@ layers:
   - {type: trans}
   - {type: trans}
   - {type: trans}
-  - {type: trans}
+  - {t: Gaming, h: toggle}
   - Bat Level
   - {type: trans}
   - {type: trans}
@@ -270,8 +270,8 @@ layers:
   - {t: Numword, h: Num, s: Sticky Num}
   - {type: trans}
   - {type: trans}
-  - {type: trans}
   - CANCEL
+  - {type: trans}
   - ''
   Num:
   - '1'
@@ -309,8 +309,8 @@ layers:
   - {t: Numword, h: Num, s: Sticky Num, type: held}
   - {type: trans}
   - {type: trans}
-  - {type: trans}
   - CANCEL
+  - {type: trans}
   - ''
   Nav:
   - '&win_lock'
@@ -411,6 +411,15 @@ combos:
 - p: [23, 24]
   k: Ctl+V
   l: [Base, Gaming]
+- p: [22, 24]
+  k: Gui+X
+  l: [MacOS]
+- p: [22, 23]
+  k: Gui+C
+  l: [MacOS]
+- p: [23, 24]
+  k: Gui+V
+  l: [MacOS]
 - p: [6, 7]
   k: ''''
   l: [Base, MacOS, Gaming]
@@ -423,12 +432,6 @@ combos:
 - p: [2, 12]
   k: \
   l: [Base, MacOS, Gaming]
-- p: [12, 17]
-  k: {t: Gaming, h: toggle}
-  l: [Adjust]
-- p: [14, 15]
-  k: {t: MacOS, h: toggle}
-  l: [Adjust]
 - p: [14, 15]
   k: {t: Numword, h: Num, s: Sticky Num}
   l: [Base, MacOS, Gaming]
