--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -31,4 +31,15 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 
 CONFIG_DONGLE_SCREEN_WPM_ACTIVE=n
 
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+CONFIG_NICE_OLED_GEM_ANIMATION=n
+
+CONFIG_NICE_OLED_WIDGET_WPM=n
+CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
+CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=n
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=y
+CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_LUNA=y
+
 
