--- a/build.yaml
+++ b/build.yaml
@@ -93,9 +93,23 @@ include:
     snippet: studio-rpc-usb-uart
     artifact-name: forager_standalone_left
   - board: seeeduino_xiao_ble
-    shield: forager_right rgbled_adapter
-    snippet: studio-rpc-usb-uart
+    shield: forager_right
+    snippet: studio-rpc-usb-uart zmk-usb-logging
     artifact-name: forager_standalone_right
+
+    # Forager with a dongle
+  - board: seeeduino_xiao_ble
+    shield: forager_dongle dongle_screen
+    snippet: studio-rpc-usb-uart
+    artifact-name: forager_dongle_central
+  - board: seeeduino_xiao_ble
+    shield: forager_left rgbled_adapter
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    artifact-name: forager_dongle_left
+  - board: seeeduino_xiao_ble
+    shield: forager_right rgbled_adapter
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+    artifact-name: forager_dongle_right
 
     # Charybdis without a dongle
   - board: nice_nano_v2
@@ -103,4 +117,5 @@ include:
     artifact-name: charybdis_nano_standalone_left
   - board: nice_nano_v2
     shield: charybdis_nano_right
+    snippet: zmk-usb-logging
     artifact-name: charybdis_nano_standalone_right
