--- a/config/combos.dtsi
+++ b/config/combos.dtsi
@@ -19,26 +19,28 @@
 // 8-argument version of ZMK_COMBO defined in base.keymap.
 ZMK_MACRO(esc, bindings = <&kp ESC>;) // target of the combo can't be a kp
 
-ZMK_COMBO(esc,  &esc,            RM2 RM1,     BASE NAV NUM MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST, RS(RCTRL), KEYS_L)
-ZMK_COMBO(cword,&caps_word,      LM1 RM1,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST, LS(RSFT), KEYS_L KEYS_R)
+ZMK_COMBO(esc,        &esc,             RM2 RM1,     BASE NAV NUM MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST, RS(RCTRL), KEYS_L)
+ZMK_COMBO(lesc,       &esc,             LM2 LM1,     BASE NAV NUM MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST, LS(LCTRL), KEYS_L)
+ZMK_COMBO(nword,      &num_dance,       RM1 RM3,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST, RA(RSFT), KEYS_L KEYS_R)
+ZMK_COMBO(lnword,     &num_dance,       LM1 LM3,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST, LA(LSFT), KEYS_L KEYS_R)
 
-ZMK_COMBO(mouse, &smart_mouse,   LB3 LB4,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cword,      &caps_word,       LM1 RM1,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST, LS(rSFT), KEYS_L KEYS_R)
+
+ZMK_COMBO(mouse,      &smart_mouse,     LB3 LB4,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* Horizontal combos - left hand */
-ZMK_COMBO(cut,        &kp LC(X),      LB3 LB1,     BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(copy,       &kp LC(C),      LB3 LB2,     BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(paste,      &kp LC(V),      LB2 LB1,     BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mcut,        &kp LG(X),      LB3 LB1,     	   MAC,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(copy,       &kp LG(C),      LB3 LB2,             MAC,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(mpaste,      &kp LG(V),      LB2 LB1,            MAC,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(cut,        &kp LC(X),        LB3 LB1,     BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(copy,       &kp LC(C),        LB3 LB2,     BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(paste,      &kp LC(V),        LB2 LB1,     BASE GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mcut,       &kp LG(X),        LB3 LB1,     	     MAC,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(copy,       &kp LG(C),        LB3 LB2,             MAC,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(mpaste,     &kp LG(V),        LB2 LB1,             MAC,       COMBO_TERM_FAST, COMBO_IDLE_FAST)
 /* Horizontal combos - right hand */
-ZMK_COMBO(quote,      &kp SQT,        RT1 RT2,     BASE MAC GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(dquote,     &kp DQT,        RT2 RT3,     BASE MAC GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-ZMK_COMBO(qmark,      &kp QMARK,      RB2 RB3,     BASE MAC GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(quote,      &kp SQT,          RT1 RT2,     BASE MAC GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(dquote,     &kp DQT,          RT2 RT3,     BASE MAC GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(qmark,      &kp QMARK,        RB2 RB3,     BASE MAC GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 /* Vertical combos left hand */
-ZMK_COMBO(backslash,  &kp BACKSLASH,  LT2 LM2,     BASE MAC GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
-/* toggle capsword */
-ZMK_COMBO(nword,     &smart_num NUM 0,       LM0 RM0,     BASE MAC GAMING, COMBO_TERM_FAST, COMBO_IDLE_FAST)
+ZMK_COMBO(backslash,  &kp BACKSLASH,    LT2 LM2,     BASE MAC GAMING,   COMBO_TERM_FAST, COMBO_IDLE_FAST)
 
 /* leader */
 //ZMK_COMBO(lead,     &leader,      RB2 RB3,     BASE, COMBO_TERM_FAST, COMBO_IDLE_FAST)
