--- a/draw/totem.yaml
+++ b/draw/totem.yaml
@@ -36,7 +36,7 @@ layers:
   - {t: Numword, h: Num, s: Sticky Num}
   - {t: Tab, h: Lower}
   - {t: Enter, h: Nav}
-  - Space SC
+  - {t: Space SC, h: Num}
   - {t: Bspc, h: Raise, s: Del}
   - ''
   MacOS:
@@ -114,7 +114,7 @@ layers:
   - {t: Numword, h: Num, s: Sticky Num}
   - {t: Tab, h: Lower}
   - {t: Enter, h: Nav}
-  - Space SC
+  - {t: Space SC, h: Num}
   - {t: Bspc, h: Raise, s: Del}
   - ''
   Lower:
@@ -205,7 +205,7 @@ layers:
   - BT 1
   - BT 2
   - BT 3
-  - BT 4
+  - OUT TOG
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -223,7 +223,7 @@ layers:
   - {type: trans}
   - {t: Gaming, h: toggle}
   - Bat Level
-  - {type: trans}
+  - Conn
   - {type: trans}
   - {type: trans}
   - Boot
@@ -310,10 +310,10 @@ layers:
   - {type: trans}
   - {type: trans}
   - CANCEL
-  - {type: trans}
+  - {t: Bspc, h: Raise, s: Del}
   - ''
   Nav:
-  - '&win_lock'
+  - Screen Lock
   - {type: trans}
   - Prev Win/Tab
   - Next Tab
@@ -327,14 +327,14 @@ layers:
   - {type: trans}
   - {type: trans}
   - {type: trans}
-  - '&win_prsc'
+  - Print Screen
   - PgDn
   - ←
   - ↓
   - →
   - {type: trans}
   - Esc
-  - Turn Off
+  - ''
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -373,7 +373,7 @@ layers:
   - →
   - {type: trans}
   - Esc
-  - Turn Off
+  - ''
   - {type: trans}
   - {type: trans}
   - {type: trans}
@@ -394,8 +394,21 @@ combos:
 - p: [17, 16]
   k: {t: ESC, h: Sft+Ctrl}
   l: [Base, Nav, Num, MacOS, Gaming]
+- p: [12, 13]
+  k: {t: ESC, h: Sft+Ctrl}
+  l: [Base, Nav, Num, MacOS, Gaming]
+- p: [16, 18]
+  k: {t: Numword, h: AltGr+RSFT, s: Sticky Num}
+  l: [Base, MacOS, Gaming]
+  a: top
+  o: 1.45
+- p: [13, 11]
+  k: {t: Numword, h: Alt+LSFT, s: Sticky Num}
+  l: [Base, MacOS, Gaming]
+  a: top
+  o: 1.45
 - p: [13, 16]
-  k: {t: Caps Word, h: Sft+RSFT}
+  k: {t: Caps, h: Sft+RSFT}
   l: [Base, MacOS, Gaming]
 - p: [22, 21]
   k: Smart Mouse
@@ -431,7 +444,4 @@ combos:
   l: [Base, MacOS, Gaming]
 - p: [2, 12]
   k: \
-  l: [Base, MacOS, Gaming]
-- p: [14, 15]
-  k: {t: Numword, h: Num, s: Sticky Num}
   l: [Base, MacOS, Gaming]
